# Cursachizi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  EXECUTION_PLAN.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_work_type.py  0003_add_reference_s3_key.py  0004_add_payments_table.py  20260313_001_add_cascade_and_credits_check.py
backend/app/: config.py  main.py  testing.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  jobs.py  offer.py  payments.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/llm/: __init__.py  anthropic.py  factory.py  openai_provider.py  openrouter.py  provider.py
backend/app/models/: __init__.py  job.py  payment.py  user.py
backend/app/pipeline/: orchestrator.py
backend/app/pipeline/formatter/: __init__.py  article_docx_generator.py  document_renderer.py  docx_generator.py  gost_reference.py  reference_extractor.py  stage.py  visual_matcher.py
backend/app/pipeline/research/: __init__.py  diversity_checker.py  query_expander.py  ranker.py  scraper.py  searcher.py  stage.py
backend/app/pipeline/verifier/: __init__.py  stage.py  (+3 more)
backend/app/services/: robokassa.py  storage.py  user_service.py
backend/app/utils/: retry.py
backend/app/workers/: tasks.py
backend/tests/: conftest.py
backend/tests/test_api/: test_deps.py  test_health.py  test_jobs.py  test_payment_schemas.py  test_payments.py  test_schemas.py
backend/tests/test_llm/: test_factory.py  test_openrouter.py  test_provider.py
backend/tests/test_pipeline/: test_article_docx_generator.py  test_article_outliner.py  test_article_section_writer.py  test_bibliography_registry.py  test_citation_fixer.py  test_coherence_checker.py  test_correction_applier.py  test_diversity_checker.py  test_docx_generator.py  test_fact_checker.py  test_humanizer.py  test_intro_conclusion_validator.py  test_orchestrator.py  test_outline_compliance_checker.py  test_outline_parser.py  test_outliner.py  test_query_expander.py  test_ranker.py  test_reference_extractor.py  test_scraper.py  test_searcher.py  test_section_evaluator.py  test_section_writer.py  test_visual_matcher.py  test_writer_stage.py
backend/tests/test_services/: test_robokassa.py
backend/tests/test_utils/: test_retry.py
backend/tests/test_workers/: test_tasks.py
bot/: pyproject.toml
bot/app/: config.py  main.py
bot/app/handlers/: generate.py  payment.py  start.py  status.py
bot/app/keyboards/: inline.py  payment.py
bot/app/services/: api_client.py
bot/tests/: test_api_client.py  test_keyboards.py
(+42 files in other folders)
