[project]
name = "courseforge"
version = "0.1.0"
description = "AI-powered coursework generation platform for Russian universities"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["shared", "app"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "bot/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services",
    "slow: marks slow tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["trafilatura.*", "docx.*", "aiogram.*", "arq.*"]
ignore_missing_imports = true
