[project]
name = "courseforge-bot"
version = "0.1.0"
description = "CourseForge Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.14.0",
    "aiohttp-socks>=0.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]
